--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ colorama==0.4.6
     # via click
 fastapi==0.89.1
     # via -r requirements.in
+gunicorn==20.1.0
+    # via -r requirements.in
 h11==0.14.0
     # via uvicorn
 idna==3.4
@@ -32,6 +34,8 @@ pytz==2022.7.1
     # via pandas
 six==1.16.0
     # via python-dateutil
+sklearn==0.0.post1
+    # via -r requirements.in
 sniffio==1.3.0
     # via anyio
 starlette==0.22.0
@@ -42,3 +46,6 @@ typing-extensions==4.4.0
     #   starlette
 uvicorn==0.20.0
     # via -r requirements.in
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
