--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,22 @@
 #
 anyio==3.6.2
     # via starlette
+apeye==1.3.0
+    # via pypi-json
+apeye-core==1.1.0
+    # via apeye
+certifi==2022.12.7
+    # via requests
+charset-normalizer==3.0.1
+    # via requests
 click==8.1.3
     # via uvicorn
 colorama==0.4.6
     # via click
+domdf-python-tools==3.6.0
+    # via
+    #   apeye
+    #   apeye-core
 fastapi==0.89.1
     # via -r requirements.in
 gunicorn==20.1.0
@@ -17,33 +29,62 @@ gunicorn==20.1.0
 h11==0.14.0
     # via uvicorn
 idna==3.4
-    # via anyio
+    # via
+    #   anyio
+    #   apeye-core
+    #   requests
 joblib==1.2.0
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   scikit-learn
+natsort==8.2.0
+    # via domdf-python-tools
 numpy==1.24.1
     # via
     #   -r requirements.in
     #   pandas
+    #   scikit-learn
+    #   scipy
+packaging==23.0
+    # via pypi-json
 pandas==1.5.3
     # via -r requirements.in
+platformdirs==2.6.2
+    # via apeye
 pydantic==1.10.4
-    # via fastapi
+    # via
+    #   -r requirements.in
+    #   fastapi
+pypi-json==0.3.0
+    # via -r requirements.in
 python-dateutil==2.8.2
     # via pandas
 pytz==2022.7.1
     # via pandas
+requests==2.28.2
+    # via
+    #   -r requirements.in
+    #   apeye
+    #   pypi-json
+scikit-learn==1.2.1
+    # via -r requirements.in
+scipy==1.10.0
+    # via scikit-learn
 six==1.16.0
     # via python-dateutil
-sklearn==0.0.post1
-    # via -r requirements.in
 sniffio==1.3.0
     # via anyio
 starlette==0.22.0
     # via fastapi
+threadpoolctl==3.1.0
+    # via scikit-learn
 typing-extensions==4.4.0
     # via
+    #   domdf-python-tools
     #   pydantic
     #   starlette
+urllib3==1.26.14
+    # via requests
 uvicorn==0.20.0
     # via -r requirements.in
 
