--- a/requirements.txt
+++ b/requirements.txt
@@ -6,70 +6,64 @@
 #
 anyio==3.6.2
     # via starlette
-apeye==1.3.0
-    # via pypi-json
-apeye-core==1.1.0
-    # via apeye
-certifi==2022.12.7
-    # via requests
-charset-normalizer==3.0.1
-    # via requests
 click==8.1.3
     # via uvicorn
 colorama==0.4.6
     # via click
-domdf-python-tools==3.6.0
-    # via
-    #   apeye
-    #   apeye-core
+contourpy==1.0.7
+    # via matplotlib
+cycler==0.11.0
+    # via matplotlib
 fastapi==0.89.1
     # via -r requirements.in
-gunicorn==20.1.0
+fonttools==4.38.0
+    # via matplotlib
+gunicorn==19.9.0
     # via -r requirements.in
 h11==0.14.0
     # via uvicorn
+httptools==0.5.0
+    # via -r requirements.in
 idna==3.4
-    # via
-    #   anyio
-    #   apeye-core
-    #   requests
+    # via anyio
 joblib==1.2.0
     # via
     #   -r requirements.in
     #   scikit-learn
-natsort==8.2.0
-    # via domdf-python-tools
+kiwisolver==1.4.4
+    # via matplotlib
+matplotlib==3.6.3
+    # via -r requirements.in
 numpy==1.24.1
     # via
     #   -r requirements.in
+    #   contourpy
+    #   matplotlib
     #   pandas
     #   scikit-learn
     #   scipy
 packaging==23.0
-    # via pypi-json
+    # via matplotlib
 pandas==1.5.3
     # via -r requirements.in
-platformdirs==2.6.2
-    # via apeye
+pillow==9.4.0
+    # via matplotlib
 pydantic==1.10.4
-    # via
-    #   -r requirements.in
-    #   fastapi
-pypi-json==0.3.0
-    # via -r requirements.in
+    # via fastapi
+pyparsing==3.0.9
+    # via matplotlib
 python-dateutil==2.8.2
-    # via pandas
+    # via
+    #   matplotlib
+    #   pandas
 pytz==2022.7.1
     # via pandas
-requests==2.28.2
-    # via
-    #   -r requirements.in
-    #   apeye
-    #   pypi-json
 scikit-learn==1.2.1
     # via -r requirements.in
 scipy==1.10.0
-    # via scikit-learn
+    # via
+    #   -r requirements.in
+    #   scikit-learn
 six==1.16.0
     # via python-dateutil
 sniffio==1.3.0
@@ -80,13 +74,7 @@ threadpoolctl==3.1.0
     # via scikit-learn
 typing-extensions==4.4.0
     # via
-    #   domdf-python-tools
     #   pydantic
     #   starlette
-urllib3==1.26.14
-    # via requests
 uvicorn==0.20.0
     # via -r requirements.in
-
-# The following packages are considered to be unsafe in a requirements file:
-# setuptools
