--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,12 @@ anyio==3.6.2
     # via starlette
 click==8.1.3
     # via uvicorn
+cloudpickle==2.2.1
+    # via shap
 colorama==0.4.6
-    # via click
+    # via
+    #   click
+    #   tqdm
 contourpy==1.0.7
     # via matplotlib
 cycler==0.11.0
@@ -32,20 +36,30 @@ joblib==1.2.0
     #   scikit-learn
 kiwisolver==1.4.4
     # via matplotlib
+llvmlite==0.39.1
+    # via numba
 matplotlib==3.6.3
     # via -r requirements.in
-numpy==1.24.1
+numba==0.56.4
+    # via shap
+numpy==1.23.5
     # via
     #   -r requirements.in
     #   contourpy
     #   matplotlib
+    #   numba
     #   pandas
     #   scikit-learn
     #   scipy
+    #   shap
 packaging==23.0
-    # via matplotlib
+    # via
+    #   matplotlib
+    #   shap
 pandas==1.5.3
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   shap
 pillow==9.4.0
     # via matplotlib
 pydantic==1.10.4
@@ -59,22 +73,34 @@ python-dateutil==2.8.2
 pytz==2022.7.1
     # via pandas
 scikit-learn==1.2.1
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   shap
 scipy==1.10.0
     # via
     #   -r requirements.in
     #   scikit-learn
+    #   shap
+shap==0.41.0
+    # via -r requirements.in
 six==1.16.0
     # via python-dateutil
+slicer==0.0.7
+    # via shap
 sniffio==1.3.0
     # via anyio
 starlette==0.22.0
     # via fastapi
 threadpoolctl==3.1.0
     # via scikit-learn
+tqdm==4.64.1
+    # via shap
 typing-extensions==4.4.0
     # via
     #   pydantic
     #   starlette
 uvicorn==0.20.0
     # via -r requirements.in
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
