--- a/requirements.txt
+++ b/requirements.txt
@@ -8,20 +8,10 @@ anyio==3.6.2
     # via starlette
 click==8.1.3
     # via uvicorn
-cloudpickle==2.2.1
-    # via shap
 colorama==0.4.6
-    # via
-    #   click
-    #   tqdm
-contourpy==1.0.7
-    # via matplotlib
-cycler==0.11.0
-    # via matplotlib
+    # via click
 fastapi==0.89.1
     # via -r requirements.in
-fonttools==4.38.0
-    # via matplotlib
 gunicorn==19.9.0
     # via -r requirements.in
 h11==0.14.0
@@ -31,76 +21,16 @@ httptools==0.5.0
 idna==3.4
     # via anyio
 joblib==1.2.0
-    # via
-    #   -r requirements.in
-    #   scikit-learn
-kiwisolver==1.4.4
-    # via matplotlib
-llvmlite==0.39.1
-    # via numba
-matplotlib==3.6.3
     # via -r requirements.in
-numba==0.56.4
-    # via shap
-numpy==1.23.5
-    # via
-    #   -r requirements.in
-    #   contourpy
-    #   matplotlib
-    #   numba
-    #   pandas
-    #   scikit-learn
-    #   scipy
-    #   shap
-packaging==23.0
-    # via
-    #   matplotlib
-    #   shap
-pandas==1.5.3
-    # via
-    #   -r requirements.in
-    #   shap
-pillow==9.4.0
-    # via matplotlib
 pydantic==1.10.4
     # via fastapi
-pyparsing==3.0.9
-    # via matplotlib
-python-dateutil==2.8.2
-    # via
-    #   matplotlib
-    #   pandas
-pytz==2022.7.1
-    # via pandas
-scikit-learn==1.2.1
-    # via
-    #   -r requirements.in
-    #   shap
-scipy==1.10.0
-    # via
-    #   -r requirements.in
-    #   scikit-learn
-    #   shap
-shap==0.41.0
-    # via -r requirements.in
-six==1.16.0
-    # via python-dateutil
-slicer==0.0.7
-    # via shap
 sniffio==1.3.0
     # via anyio
 starlette==0.22.0
     # via fastapi
-threadpoolctl==3.1.0
-    # via scikit-learn
-tqdm==4.64.1
-    # via shap
 typing-extensions==4.4.0
     # via
     #   pydantic
     #   starlette
 uvicorn==0.20.0
     # via -r requirements.in
-
-# The following packages are considered to be unsafe in a requirements file:
-# setuptools
